// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> render matches logged in snapshot 1`] = `
<Headerstyles__StyledHeader>
  <Headerstyles__HeaderContainer>
    <Headerstyles__HeaderLogo
      to="/"
    />
    <Headerstyles__HeaderMenuArea>
      <Headerstyles__HeaderMobileMenuButton
        onClick={[Function]}
      >
        menu
      </Headerstyles__HeaderMobileMenuButton>
      <Headerstyles__HeaderMenu
        align="end"
        isOpen={false}
        links={
          Object {
            "createAccount": Object {
              "href": "/sign-up",
              "title": "Create an account",
            },
            "login": Object {
              "bold": true,
              "href": "/login",
              "inverse": true,
              "title": "Login",
            },
          }
        }
        onLinkClick={[Function]}
      >
        <withAuthentication(withUser(Connect(UserPanel))) />
      </Headerstyles__HeaderMenu>
    </Headerstyles__HeaderMenuArea>
  </Headerstyles__HeaderContainer>
</Headerstyles__StyledHeader>
`;

exports[`<Header /> render matches logged out snapshot 1`] = `
<Headerstyles__StyledHeader>
  <Headerstyles__HeaderContainer>
    <Headerstyles__HeaderLogo
      to="/"
    />
    <Headerstyles__HeaderMenuArea>
      <Headerstyles__HeaderMobileMenuButton
        onClick={[Function]}
      >
        menu
      </Headerstyles__HeaderMobileMenuButton>
      <Headerstyles__HeaderMenu
        align="end"
        isOpen={false}
        links={
          Array [
            Object {
              "data-active": false,
              "href": "",
              "onClick": [Function],
              "title": "Create an account",
            },
            Object {
              "bold": true,
              "data-active": false,
              "href": "",
              "inverse": true,
              "onClick": [Function],
              "title": "Login",
            },
          ]
        }
        onLinkClick={[Function]}
      >
        <withAuthentication(withUser(Connect(UserPanel))) />
      </Headerstyles__HeaderMenu>
    </Headerstyles__HeaderMenuArea>
  </Headerstyles__HeaderContainer>
  <Modal
    modalContentProps={Object {}}
    onClose={[Function]}
    open={false}
  />
</Headerstyles__StyledHeader>
`;
